--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 curl = "0.4.35"
+serde_with = { version = "1.6.4", features = [ "json" ] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+isahc = "1.1.0"
